# cs419

./: .gitignore  README.md
tracer/: CMakeLists.txt
tracer/src/: camera.cpp  camera.h  directional_light.cpp  directional_light.h  geometry.h  intersect.h  light.h  main.cc  material.h  new.cc  object.h  plane.cpp  plane.h  ray.h  sample.h  scene.cpp  scene.h  screen.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  typedef.h
tracer/test/: camera.cc  geometry.cc  light.cc  main.cc
tracer2/: CMakeLists.txt
tracer2/src/: AABB.cpp  AABB.h  AmbientLight.cpp  AmbientLight.h  BHV.cpp  BHV.h  BHVNode.h  BRDF.h  DirectionLight.cpp  DirectionLight.h  PhongMaterial.cpp  PhongMaterial.h  PointLight.cpp  PointLight.h  ambient_brdf.cpp  ambient_brdf.h  camera.cpp  camera.h  diffuse_brdf.cpp  diffuse_brdf.h  geometry.h  img_util.cpp  img_util.h  intersect.h  light.h  main.cc  material.h  object.cpp  object.h  plane.cpp  plane.h  ray.h  raytracer.h  reader.cpp  reader.h  sample.cpp  sample.h  scene.cpp  scene.h  screen.cpp  (+10 more)
tracer2/test/: AABB.cc  geometry.cc  lighting.cc  mesh.cc  misc.cc  reader.cc
tracer_version1/: comparison.jl  raytracer.jl  test.jl
tracer_version1/src/: camera.jl  geometry.jl  include.jl  light.jl  ray.jl  render.jl  sample.jl  sample2d.jl  vec3.jl
